--- a/docs/setup/Devtron-upgrade/0.2.x-0.3.x.md
+++ b/docs/setup/Devtron-upgrade/0.2.x-0.3.x.md
@@ -24,21 +24,8 @@ kubectl -n devtroncd get clusterrole
 
 #### STEP 3
 
-After verifying the deletion of resources, execute the following command to edit and update the tag value in the installation-script of Devtron.
+Running the below command will resync the new update. 
 
 ```bash
-kubectl -n devtroncd edit installer 
-```
-Change the tag value as `main` in the url present inside spec
-
-```bash
-https://raw.githubusercontent.com/devtron-labs/devtron/main/manifests/installation-script
-```
-
-#### STEP 4 
-
-After setting up everything, execute the following helm update command to upgrade the devtron version from 0.2.x to 0.3.x.
-
-```bash
-helm repo update
+kubectl patch -n devtroncd installer installer-devtron --type='json' -p='[{"op": "add", "path": "/spec/reSync", "value": true }]
 ```
